--- a/src/KnowledgeBaseServer/KnowledgeBaseServer.csproj
+++ b/src/KnowledgeBaseServer/KnowledgeBaseServer.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" />
       <PackageReference Include="Microsoft.Extensions.Logging" />
       <PackageReference Include="ModelContextProtocol" />
+      <PackageReference Include="System.Text.Json" />
     </ItemGroup>
 
     <ItemGroup>
