--- a/tests/KnowledgeBaseServer.Tests/KnowledgeBaseServer.Tests.csproj
+++ b/tests/KnowledgeBaseServer.Tests/KnowledgeBaseServer.Tests.csproj
@@ -5,11 +5,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" />
         <PackageReference Include="coverlet.collector" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="Shouldly" />
         <PackageReference Include="xunit" />
         <PackageReference Include="xunit.analyzers" />
         <PackageReference Include="xunit.runner.visualstudio" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\KnowledgeBaseServer\KnowledgeBaseServer.csproj" />
     </ItemGroup>
 
 </Project>
