--- a/tests/KnowledgeBaseServer.Tests/KnowledgeBaseServer.Tests.csproj
+++ b/tests/KnowledgeBaseServer.Tests/KnowledgeBaseServer.Tests.csproj
@@ -7,6 +7,10 @@
     <ItemGroup>
         <PackageReference Include="Bogus" />
         <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="GitHubActionsTestLogger">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="Shouldly" />
         <PackageReference Include="xunit" />
