--- a/src/KnowledgeBaseServer/KnowledgeBaseServer.csproj
+++ b/src/KnowledgeBaseServer/KnowledgeBaseServer.csproj
@@ -16,8 +16,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="Migrations\20250405T1234_InitialMigration.sql" />
-      <EmbeddedResource Include="Migrations\20250405T1234_InitialMigration.sql" />
+      <None Remove="Migrations\*.sql" />
+      <EmbeddedResource Include="Migrations\*.sql" />
     </ItemGroup>
 
 </Project>
