--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,11 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build --no-restore --configuration Release
+        run: dotnet build --configuration Release
 
       - name: Test
         run: >-
           dotnet test
-          --no-restore
           --no-build
           --configuration Release
           --logger "console;verbosity=normal"
