Add database migration tests
Move WAL initialization to main method so that test dbs can be initialized as a single file for convenience.

Correct nullability in MemorySearch data model.

--- a/tests/KnowledgeBaseServer.Tests/KnowledgeBaseServer.Tests.csproj
+++ b/tests/KnowledgeBaseServer.Tests/KnowledgeBaseServer.Tests.csproj
@@ -22,4 +22,10 @@
       <ProjectReference Include="..\..\src\KnowledgeBaseServer\KnowledgeBaseServer.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="DatabaseMigrationTests\databases\*.sqlite">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
