--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: mbcrawfo/knowledge-base-server
-          tags: type=ref,event=tag
+          tags: type=semver,pattern={{version}}
 
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
