--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,6 +18,7 @@
         <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.4" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
         <PackageVersion Include="ModelContextProtocol" Version="0.1.0-preview.11" />
+        <PackageVersion Include="Neovolve.Logging.Xunit.v3" Version="7.1.0" />
         <PackageVersion Include="Roslynator.Analyzers" Version="4.13.1" />
         <PackageVersion Include="Shouldly" Version="4.3.0" />
         <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.8.0.113526">
@@ -25,7 +26,6 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageVersion>
         <PackageVersion Include="System.Text.Json" Version="9.0.4" />
-        <PackageVersion Include="xunit" Version="2.9.3" />
         <PackageVersion Include="xunit.analyzers" Version="1.21.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -34,5 +34,6 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageVersion>
+        <PackageVersion Include="xunit.v3" Version="2.0.1" />
     </ItemGroup>
 </Project>
