--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,4 +57,4 @@ jobs:
         run: dotnet tool restore
 
       - name: Run CSharpier
-        run: dotnet csharpier --check .
+        run: dotnet csharpier check .
